--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
+        multiDexEnabled = true
         applicationId "com.neihanjetpack"
         minSdkVersion 15
         targetSdkVersion 29
@@ -34,7 +35,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
+    implementation "androidx.multidex:multidex:2.0.0"
     // Retrofit
     api "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
     api "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
@@ -42,24 +43,19 @@ dependencies {
     api "com.squareup.okhttp3:logging-interceptor:$rootProject.okhttploggingVersion"
     api "com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion"
     api "com.trello.rxlifecycle2:rxlifecycle-components:${rx_lifecycle_version}"
-    // butterKnife
-    api "com.jakewharton:butterknife:$rootProject.ext.butterknifeVwesion"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterknifeVwesion"
-
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     // RxBinging
     api "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:$rootProject.rxbindingVersion"
-
+    kapts.each { k, v -> kapt v }
     // Glide
     api "com.github.bumptech.glide:glide:$rootProject.glideVersion"
-    annotationProcessor "com.github.bumptech.glide:compiler:$rootProject.glideVersion"
     implementation "com.github.CymChad:BaseRecyclerViewAdapterHelper:$rootProject.ext.BaseRecyclerViewAdapterHelperVersion"
-
     def paging_version = "1.0.0"
     api "android.arch.paging:runtime:$paging_version"
     testImplementation "android.arch.paging:common:$paging_version"
     api 'android.arch.paging:rxjava2:1.0.0-rc1'
-
+    //Room
     def lifecycle_version = "1.1.1"
     api "android.arch.lifecycle:extensions:$lifecycle_version"
     // alternatively - just ViewModel
@@ -78,6 +74,24 @@ dependencies {
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0'
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0'
+    implementation 'com.github.arcadefire:nice-spinner:1.4.4'
+    //Room 自动系统导入的缺乏kapt 会报错
+    def room_version = "2.2.3"
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
+    implementation "android.arch.persistence.room:rxjava2:$room_version"
+    implementation "android.arch.persistence.room:guava:$room_version"
+    //litepal 代替room
+    implementation 'org.litepal.android:kotlin:3.0.0'
+    //design 变为如下
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    //协程
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc03'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-rc03'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
 }
 repositories {
     mavenCentral()
