--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
@@ -19,14 +19,14 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url "https://jitpack.io" }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
-ext{
+ext {
 
     retrofitVersion = '2.2.0'
     okhttploggingVersion = '3.4.1'
@@ -36,15 +36,17 @@ ext{
     rxbindingVersion = '2.0.0'
     rx_lifecycle_version = '2.2.0'
     constraintVersion = '1.1.2'
-    butterknifeVwesion = '10.0.0'
     rxandroidVersion = '2.0.1'
     rxjavaVersion = '2.1.7'
     rxbindingVersion = '2.1.1'
-    glideVersion = '4.6.1'
-    glide_transformations = '3.0.1'
+    glideVersion = '4.9.0'
     gsonVersion = '2.8.2'
     okhttpVersion = '3.9.1'
     retrofit2Version = '2.3.0'
     rxjava2_adapterVersion = '1.0.0'
     BaseRecyclerViewAdapterHelperVersion = '2.9.34'
+//暂时只能这样应用 不然找不到
+    kapts = [
+            glideCompiler: "com.github.bumptech.glide:compiler:$glideVersion",
+    ]
 }
